--- a/composer.json
+++ b/composer.json
@@ -11,5 +11,10 @@
             "email": "cool@520.com"
         }
     ],
-    "minimum-stability": "dev"
+    "minimum-stability": "dev",
+    "autoload": {
+        "psr-4": {
+            "ywls\\": "src/"
+        }
+    }
 }
